--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,15 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+
+    min-height: 100vh;
 }
 
 .page {
     width: 1000px;
-    margin: 50px auto 0;
+    margin: 0 auto;
+    padding-top: 65px;
 }
 
 nav {
@@ -36,8 +40,13 @@ a {
     text-decoration: none;
 }
 
+ul li a{
+    opacity: 0.5;
+}
+
 ul li a:hover {
     font-weight: bold;
+    opacity: 1;
 }
 
 h1, ul {
@@ -105,4 +114,10 @@ footer {
 
 footer a {
     font-weight: bold;
+}
+
+#balls {
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
